[gd_scene load_steps=2 format=3 uid="uid://84cb0i5ynftw"]

[ext_resource type="Script" uid="uid://c2oj537hep2sw" path="res://scripts/pack_opening.gd" id="1_po"]

[node name="PackOpening" type="CanvasLayer"]
layer = 10
script = ExtResource("1_po")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Overlay/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="Overlay/CenterContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Opening Tier I Pack..."
horizontal_alignment = 1

[node name="CardsContainer" type="Control" parent="Overlay/CenterContainer/VBox"]
custom_minimum_size = Vector2(530, 120)
layout_mode = 2

[node name="AddButton" type="Button" parent="Overlay/CenterContainer/VBox"]
visible = false
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Add to Deck"
